Modified client-side code to use ajax requests in order to update tweets present in tweet-container. Also added prevented submission if tweet is too long or of zero length

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -28,3 +28,9 @@
   right: 10px;
   bottom: 13px;
 }
+
+.new-tweet .error-message {
+  position: absolute;
+  right: 45px;
+  bottom: 13px;
+}
